Fixed problem with whitespace in path in XRefTransformer added genericTreeBuilder and use it for rendering of children classes included rendering of children classes into involvedType.xslt Changed jquery.dataTables.min.js from beta to final version Made search field on index sites longer Recalculate tables on window.resize() event

--- a/MixinXRef/xml_utilities/resources/css/table_jui.css
+++ b/MixinXRef/xml_utilities/resources/css/table_jui.css
@@ -108,6 +108,10 @@ table.display thead th {
 	text-align: right;
 }
 
+.dataTables_filter input{
+	width: 80%;	
+}
+
 .dataTables_info {
 	width: 50%;
 	float: left;
